tdd study, chapter 32, extract Injectable