@@ -7,6 +7,7 @@ import com.tdd.study.exception.IllegalComponentException;
 import jakarta.inject.Inject;
 import jakarta.inject.Qualifier;
 import java.lang.annotation.Annotation;
+import java.lang.reflect.AccessibleObject;
 import java.lang.reflect.AnnotatedElement;
 import java.lang.reflect.Constructor;
 import java.lang.reflect.Executable;
@@ -15,11 +16,11 @@ import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
 import java.lang.reflect.Parameter;
-import java.lang.reflect.Type;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 import java.util.function.BiFunction;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
@@ -27,40 +28,43 @@ import java.util.stream.Stream;
 
 public class InjectionProvider<T> implements ComponentProvider<T> {
 
-  private Constructor<T> injectConstructor;
+  private List<Injectable<Field>> injectFields;
 
-  private List<Field> injectFields;
+  private Injectable<Constructor<T>> injectConstructor;
 
-  private List<Method> injectMethods;
+  private List<Injectable<Method>> injectMethods;
 
-  private List<ComponentRef> dependencies;
 
   public InjectionProvider(Class<T> component) {
     if (Modifier.isAbstract(component.getModifiers())) {
       throw new IllegalComponentException();
     }
     this.injectConstructor = getInjectConstructor(component);
-    this.injectFields = getInjectFields(component);
-    this.injectMethods = getInjectMethods(component);
-    if (injectFields.stream().anyMatch(field -> Modifier.isFinal(field.getModifiers()))) {
-      throw new IllegalComponentException();
-    }
-    if (injectMethods.stream().anyMatch(method -> method.getTypeParameters().length != 0)) {
-      throw new IllegalComponentException();
-    }
 
-    this.dependencies = getDependencies();
+    this.injectMethods = getInjectMethods(component);
+
+    this.injectFields = getInjectFields(component);
+
+    if (injectFields.stream().map(fieldInjectable -> fieldInjectable.element)
+        .anyMatch(field -> Modifier.isFinal(field.getModifiers()))) {
+      throw new IllegalComponentException();
+    }
+    if (injectMethods.stream().map(methodInjectable -> methodInjectable.element)
+        .anyMatch(method -> method.getTypeParameters().length != 0)) {
+      throw new IllegalComponentException();
+    }
   }
 
   @Override
   public T get(Context context) {
     try {
-      T instance = injectConstructor.newInstance(toDependencies(context, injectConstructor));
-      for (Field field : injectFields) {
-        field.set(instance, toDependency(context, field.getGenericType(), getQualifier(field)));
+
+      T instance = injectConstructor.element.newInstance(injectConstructor.toDependencies(context));
+      for (Injectable<Field> field : injectFields) {
+        field.element.set(instance, field.toDependencies(context)[0]);
       }
-      for (Method method : injectMethods) {
-        method.invoke(instance, toDependencies(context, method));
+      for (Injectable<Method> method : injectMethods) {
+        method.element.invoke(instance, method.toDependencies(context));
       }
       return instance;
     } catch (InstantiationException | IllegalAccessException | InvocationTargetException e) {
@@ -69,33 +73,77 @@ public class InjectionProvider<T> implements ComponentProvider<T> {
   }
 
   @Override
-  public List<ComponentRef> getDependencies() {
-    return concat(concat(stream(injectConstructor.getParameters()).map(
-                InjectionProvider::toComponentRef),
-            injectFields.stream().map(field -> toComponentRef(field))),
-        injectMethods.stream().flatMap(method -> stream(method.getParameters()).map(
-            InjectionProvider::toComponentRef))).toList();
+  public List<ComponentRef<?>> getDependencies() {
+    return concat(concat(Stream.of(injectConstructor), injectFields.stream()),
+        injectMethods.stream()).flatMap(injectable -> stream(injectable.required)).toList();
   }
 
-  private static ComponentRef toComponentRef(Field field) {
-    return ComponentRef.of(field.getGenericType(), getQualifier(field));
+  static record Injectable<Element extends AccessibleObject>(Element element,
+                                                             ComponentRef<?>[] required) {
+
+    static <T extends Executable> Injectable<T> of(T constructor) {
+      return new Injectable<>(constructor, stream(constructor.getParameters()).map(
+          Injectable::toComponentRef).toArray(ComponentRef<?>[]::new));
+    }
+
+    static Injectable<Field> of(Field field) {
+      return new Injectable<>(field, new ComponentRef<?>[]{toComponentRef(field)});
+    }
+
+    Object[] toDependencies(Context context) {
+      return stream(required).map(context::get).map(Optional::get).toArray();
+    }
+
+    private static ComponentRef toComponentRef(Field field) {
+      return ComponentRef.of(field.getGenericType(), getQualifier(field));
+    }
+
+    private static ComponentRef toComponentRef(Parameter parameter) {
+      return ComponentRef.of(parameter.getParameterizedType(), getQualifier(parameter));
+    }
+
+    private static Annotation getQualifier(AnnotatedElement element) {
+      List<Annotation> annotations = stream(element.getAnnotations()).filter(
+          annotation -> annotation.annotationType().isAnnotationPresent(
+              Qualifier.class)).collect(Collectors.toList());
+      if (annotations.size() > 1) {
+        throw new IllegalComponentException();
+      }
+      return annotations.stream().findFirst().orElse(null);
+    }
+
   }
 
-  private static ComponentRef toComponentRef(Parameter parameter) {
-    return ComponentRef.of(parameter.getParameterizedType(), getQualifier(parameter));
+
+  private static <T> Injectable<Constructor<T>> getInjectConstructor(Class<T> component) {
+    List<Constructor> injectConstructors = injectable(component.getConstructors()).collect(
+        Collectors.toList());
+    if (injectConstructors.size() > 1) {
+      throw new IllegalComponentException();
+    }
+    return Injectable.of((Constructor<T>) injectConstructors.stream().findFirst()
+        .orElseGet(() -> getDefaultConstructor(component)));
   }
 
-  private static Annotation getQualifier(AnnotatedElement element) {
-    List<Annotation> annotations = stream(element.getAnnotations()).filter(
-        annotation -> annotation.annotationType().isAnnotationPresent(
-            Qualifier.class)).collect(Collectors.toList());
-    if (annotations.size() > 1) throw new IllegalComponentException();
-    return annotations.stream().findFirst().orElse(null);
+  private static List<Injectable<Method>> getInjectMethods(Class<?> component) {
+    List<Method> injectMethods = traverse(component, (methods, current) -> injectable(
+        current.getDeclaredMethods())
+        .filter(method1 -> isOverrideByInjectMethod(methods, method1))
+        .filter(method1 -> isOverrideByNoInjectMethod(component, method1))
+        .collect(Collectors.toList()));
+    Collections.reverse(injectMethods);
+    return injectMethods.stream().map(method -> Injectable.of(method)).toList();
   }
 
-  private static <T extends AnnotatedElement> Stream<T> injectable(T[] declaredMethods) {
-    return stream(declaredMethods)
-        .filter(method -> method.isAnnotationPresent(Inject.class));
+  private static List<Injectable<Field>> getInjectFields(Class<?> component) {
+    return InjectionProvider.<Field>traverse(component, (fields, current) -> injectable(
+            current.getDeclaredFields()).collect(Collectors.toList())).stream()
+        .map(field -> Injectable.of(field)).toList();
+  }
+
+  private static <T extends AnnotatedElement> Stream<T> injectable(T[] elements) {
+    return stream(elements)
+        .filter(element -> element.isAnnotationPresent(Inject.class));
   }
 
   private static <Type> Constructor<Type> getDefaultConstructor(Class<Type> component) {
@@ -121,31 +169,6 @@ public class InjectionProvider<T> implements ComponentProvider<T> {
     return injectMethods.stream().noneMatch(isOverride(method));
   }
 
-  private static Object[] toDependencies(Context context, Executable executable) {
-    return stream(executable.getParameters()).map(
-        parameter -> toDependency(context, parameter.getParameterizedType(), getQualifier(parameter))).toArray(Object[]::new);
-
-  }
-
-  private static Object toDependency(Context context, Type type, Annotation qualifier) {
-    return context.get(ComponentRef.of(type, qualifier)).get();
-  }
-
-  private static <Type> List<Method> getInjectMethods(Class<Type> component) {
-    List<Method> injectMethods = traverse(component, (methods, current) -> injectable(
-        current.getDeclaredMethods())
-        .filter(method -> isOverrideByInjectMethod(methods, method))
-        .filter(method -> isOverrideByNoInjectMethod(component, method))
-        .collect(Collectors.toList()));
-    Collections.reverse(injectMethods);
-    return injectMethods;
-  }
-
-
-  private static <Type> List<Field> getInjectFields(Class<Type> component) {
-    return traverse(component, (fields, current) -> injectable(
-        current.getDeclaredFields()).collect(Collectors.toList()));
-  }
 
   private static <T> List<T> traverse(Class<?> component,
       BiFunction<List<T>, Class<?>, List<T>> finder) {
@@ -158,12 +181,4 @@ public class InjectionProvider<T> implements ComponentProvider<T> {
     return members;
   }
 
-  private static <Type> Constructor<Type> getInjectConstructor(Class<Type> component) {
-    List<Constructor> injectConstructors = injectable(component.getConstructors()).collect(Collectors.toList());
-    if (injectConstructors.size() > 1) {
-      throw new IllegalComponentException();
-    }
-    return (Constructor<Type>) injectConstructors.stream().findFirst()
-        .orElseGet(() -> getDefaultConstructor(component));
-  }
 }
